--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.quizapdd">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,8 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".activity.VideoLessonsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ScoreCardActivity"
+            android:exported="false" />
         <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.Splashactivity"
+        <activity
+            android:name=".activity.Splashactivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,14 +30,13 @@
         </activity>
         <activity android:name=".activity.BaseActivity" />
         <activity android:name=".activity.CustomUrlActivity" />
-        <activity android:name=".activity.AboutDevActivity"></activity>
+        <activity android:name=".activity.AboutDevActivity" />
         <activity
-            android:name="com.example.quizapdd.activity.QuizPromptActivity"
+            android:name=".activity.QuizPromptActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize"
             android:theme="@style/AppTheme" />
-
         <activity
-            android:name="com.example.quizapdd.activity.QuizActivity"
+            android:name=".activity.QuizActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:theme="@style/AppTheme" />
     </application>
